springboot/scripts/k8s/app-deploy-template.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-name
spec:
  selector:
    matchLabels:
      app: app-name
  replicas: 3
  template:
    metadata:
      labels:
        app: app-name
    spec:
      containers:
      - name: app-name
        image: img-ver
        ports:
        - containerPort: 8080
