springboot/scripts/k8s/app-db-service-template.yaml
apiVersion: v1
kind: Service
metadata:
  name: app-name-db-service
  labels:
    svc: app-name-db
spec:
  type: ExternalName
  externalName: rds-url
