springboot/scripts/k8s/app-service-template.yaml
apiVersion: v1
kind: Service
metadata:
  name: app-name-service
  annotations:
    service.beta.kubernetes.io/aws-load-balancer-type: nlb
  labels:
    svc: app-name
spec:
  type: LoadBalancer
  ports:
  - port: 8080
    targetPort: 8080
    protocol: TCP
  selector:
    app: app-name
