springboot/scripts/k8s/app-ingress-template.yaml
apiVersion: networking.k8s.io/v1beta1 # for versions before 1.14 use extensions/v1beta1
kind: Ingress
metadata:
  name: app-name-ingress
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/target-type: instance
spec:
  rules:
  - host: app-name.jrvs
    http:
      paths:
      - path: /
        backend:
          serviceName: app-name-service
          servicePort: 8080
